<resources>
    <string name="app_name">Playlist maker</string>
    <string name="share_the_app">Поделиться приложением</string>
    <string name="dark_theme">Темная тема</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="link_to_the_practicum">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="link_to_the_agreement" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="mail" translatable="false">trenin.0235@gmail.com</string>
    <string name="title_message_for_developer">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message_for_developer">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="problem_with_network">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="clean_history">Очистить историю</string>
    <string name="you_search">Вы искали</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="playback_error">Ошибка воспроизведения</string>
    <string name="start_track">00:00</string>
    <string name="sharing">Поделиться</string>
    <string name="media">Медиатека</string>
    <string name="no_playlists">Вы не создали\n\ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="selected_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="search_fragment">SearchFragment</string>
    <string name="media_library_fragment">MediaLibraryFragment</string>
    <string name="settings_fragment">SettingsFragment</string>
    <string name="player_fragment">PlayerFragment</string>
    <string name="empty_media_library">Ваша медиатека пуста</string>
    <string name="create">Создать</string>
    <string name="name">Название</string>
    <string name="description">Описание</string>
    <string name="close_create_playlist">Завершить создание плейлиста?</string>
    <string name="cancel">Отменить</string>
    <string name="сomplete">Завершить</string>
    <string name="all_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="playlist_created">Плейлист %1$s создан</string>
    <string name="added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="alredy_add">Трек уже добавлен в плейлист %1$s</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="count_tracks">%1$s треков</string>
    <string name="do_you_wanna_delete_track">Хотите удалить трек?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="save">Сохранить</string>
    <string name="edite">Редактировать</string>
    <string name="edite_information">Редактировать информацию</string>
    <string name="do_you_wanna_delete_playlist">Хотите удалить плейлиcт «%1$s»?</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="empty_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="no_tracks_in_playlist">В плейлисте нет треков</string>



    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>