<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="@dimen/middle_mark">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/big_size_text"
            android:textFontWeight="500"/>

    </FrameLayout>

   <Button
       android:id="@+id/b1"
       style="@style/main_btn_light"
       android:layout_marginTop="40dp"
       android:foreground="?attr/selectableItemBackground"
       android:text="@string/search"
       app:icon="@drawable/search"/>

    <Button
        android:id="@+id/b2"
        style="@style/main_btn_light"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/media_library"
        app:icon="@drawable/media_library"/>

    <Button
        android:id="@+id/b3"
        style="@style/main_btn_light"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/settings"
        app:icon="@drawable/settings"/>

</LinearLayout>