<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    android:orientation="vertical"
    android:id="@+id/settings">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settingsBack"
        style="@style/toolbar"
        android:title="@string/settings">
    </Toolbar>

    <Switch
        style="@style/switchSettings"
        android:id="@+id/themeSwitcher"
        android:text="@string/dark_theme"
        android:textSize="@dimen/mark_16sp"
        android:paddingStart="@dimen/middle_mark"
        android:paddingTop="@dimen/padding_list"
        android:paddingBottom="@dimen/padding_list"
        android:paddingEnd="@dimen/mark_12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_regular"
        android:textFontWeight="400"
        tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml" />

    <FrameLayout
        android:id="@+id/shareTheApp"
        style="@style/sectionSettings">
        <TextView
            style="@style/textSectionSettings"
            android:text="@string/share_the_app" />
        <ImageView
            android:src="@drawable/share"
            style="@style/shareSectionSettingsImage" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/writeToSupport"
        style="@style/sectionSettings">

        <TextView
            style="@style/textSectionSettings"
            android:text="@string/write_to_support" />
        <ImageView
            android:src="@drawable/support"
            style="@style/supportSectionSettingsImage"/>

    </FrameLayout>
    <FrameLayout
        android:id="@+id/userAgreement"
        style="@style/sectionSettings">

        <TextView
            style="@style/textSectionSettings"
            android:text="@string/user_agreement" />
        <ImageView
            android:src="@drawable/arrow_agreement"
            style="@style/arrowAgreementSectionSettingsImage"/>
    </FrameLayout>
</LinearLayout>