<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/mediaLibraryFragment">

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.playlistmaker.ui.search.fragment.SearchFragment"
        android:label="@string/search_fragment" >
        <action
            android:id="@+id/action_searchFragment_to_playerFragment"
            app:destination="@id/playerFragment" />
    </fragment>
    <fragment
        android:id="@+id/mediaLibraryFragment"
        android:name="com.example.playlistmaker.ui.library.fragment.MediaLibraryFragment"
        android:label="@string/media_library_fragment" >
        <action
            android:id="@+id/action_mediaLibraryFragment_to_playerFragment"
            app:destination="@id/playerFragment" />
        <action
            android:id="@+id/action_mediaLibraryFragment_to_fragmentCreatePlaylist"
            app:destination="@id/createPlaylistFragment" />
        <action
            android:id="@+id/action_mediaLibraryFragment_to_playlistFragment"
            app:destination="@id/playlistFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.playlistmaker.ui.settings.fragment.SettingsFragment"
        android:label="@string/settings_fragment" />
    <fragment
        android:id="@+id/playerFragment"
        android:name="com.example.playlistmaker.ui.player.fragment.PlayerFragment"
        android:label="@string/player_fragment" >
        <action
            android:id="@+id/action_playerFragment_to_fragmentCreatePlaylist"
            app:destination="@id/createPlaylistFragment" />
        <action
            android:id="@+id/action_playerFragment_to_playlistFragment"
            app:destination="@id/playlistFragment" />
    </fragment>
    <fragment
        android:id="@+id/createPlaylistFragment"
        android:name="com.example.playlistmaker.ui.create_playlist.frgament.CreatePlaylistFragment"
        android:label="FragmentCreatePlaylist" />
    <fragment
        android:id="@+id/playlistFragment"
        android:name="com.example.playlistmaker.ui.playlist.fragment.PlaylistFragment"
        android:label="fragment_playlist"
        tools:layout="@layout/fragment_playlist" >
        <action
            android:id="@+id/action_playlistFragment_to_fragmentCreatePlaylist2"
            app:destination="@id/createPlaylistFragment" />
        <action
            android:id="@+id/action_playlistFragment_to_playerFragment"
            app:destination="@id/playerFragment" />
        <action
            android:id="@+id/action_playlistFragment_to_editePlaylistFragment"
            app:destination="@id/editePlaylistFragment" />
    </fragment>
    <fragment
        android:id="@+id/editePlaylistFragment"
        android:name="com.example.playlistmaker.ui.create_playlist.frgament.EditePlaylistFragment"
        android:label="EditePlaylistFragment" />
</navigation>