<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_white"
    xmlns:tools="http://schemas.android.com/tools">
    <Toolbar
        android:layout_width="@dimen/mark_0dp"
        android:layout_height="wrap_content"
        android:id="@+id/searchBack"
        style="@style/toolbar"
        android:layout_marginBottom="@dimen/mark_8dp"
        android:title="@string/search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:id="@+id/inputEditText"
        style="@style/search_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mark_16dp"
        android:layout_marginEnd="@dimen/mark_16dp"
        android:layout_marginTop="@dimen/mark_8dp"
        android:background="@drawable/edit_text"
        android:drawableStart="@drawable/search"
        android:textCursorDrawable="@drawable/cursor"
        android:drawablePadding="@dimen/mark_4dp"
        android:fontFamily="@font/ys_display_regular"
        android:hint="@string/search"
        android:inputType="text"
        android:lines="1"
        android:imeOptions="actionDone"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchBack"
        app:layout_constraintEnd_toEndOf="parent"
        android:maxLength="30"
        android:padding="@dimen/mark_10dp"
        android:textSize="@dimen/text_mark_16sp"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/clearIcon"
        style="@style/ic_close"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/mark_0dp"
        android:layout_marginEnd="@dimen/mark_12dp"
        android:outlineAmbientShadowColor="@color/clear"
        android:src="@drawable/ic_close"
        android:visibility="gone"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="@id/inputEditText"
        app:layout_constraintBottom_toBottomOf="@id/inputEditText"
        app:layout_constraintTop_toTopOf="@id/inputEditText" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/placeholderSearchGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_tags="imagePlaceholder,textPlaceholder, updateSearch"/>
    <ImageView
        android:id="@+id/imagePlaceholder"
        app:layout_constraintTag="imagePlaceholder"
        android:layout_width="@dimen/mark_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mark_110dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputEditText"
        tools:src="@drawable/nothing_found"/>
    <TextView
        android:id="@+id/textPlaceholder"
        app:layout_constraintTag="textPlaceholder"
        style="@style/placeHolderTextTrackList"
        android:layout_width="@dimen/mark_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mark_16dp"
        android:fontFamily="@font/ys_display_medium"
        android:textAlignment="center"
        android:textSize="@dimen/text_mark_19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagePlaceholder"
        tools:text="@string/nothing_found"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/updateSearch"
        style="@style/buttonStyle"
        app:layout_constraintTag="updateSearch"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/mark_36dp"
        android:layout_marginTop="@dimen/mark_24dp"
        android:text="@string/update"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textPlaceholder"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/historyListGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_tags="youSearch, cleanHistory"/>
    <TextView
        android:id="@+id/youSearch"
        style="@style/textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/you_search"
        android:textSize="@dimen/text_mark_19sp"
        android:visibility="gone"
        android:layout_marginTop="@dimen/mark_32dp"
        app:layout_constraintBottom_toTopOf="@+id/tracksList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputEditText"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tracksList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mark_20dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/cleanHistory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/youSearch"
        app:layout_constraintVertical_chainStyle="packed"
        tools:itemCount="2"
        tools:listitem="@layout/track_item" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cleanHistory"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/mark_36dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/mark_24dp"
        android:layout_marginBottom="@dimen/mark_24dp"
        android:layout_weight="0"
        android:text="@string/clean_history"
        android:visibility="gone"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tracksList" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/mark_44dp"
        android:layout_height="@dimen/mark_44dp"
        android:indeterminateTint="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>