<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_white"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/mark_24dp" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/mark_24dp" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline_16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/mark_16dp" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline_16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/mark_16dp" />

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/toolbar_player"
            android:title="@string/new_playlist"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/cover"
            android:layout_width="@dimen/mark_0dp"
            android:layout_height="@dimen/mark_0dp"
            android:layout_marginTop="@dimen/mark_26dp"
            tools:layout_height="312dp"
            android:background="@drawable/share_cover_border"
            android:gravity="center"
            android:clickable="true"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="@id/start_guideline_24dp"
            app:layout_constraintEnd_toEndOf="@id/end_guideline_24dp"
            app:layout_constraintBottom_toTopOf="@id/inputEditTextNameLayout">

            <ImageView
                android:id="@+id/imageCoverPlaceholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_cover"
                android:layout_gravity="center"
                android:visibility="visible"/>
            <ImageView
                android:id="@+id/imageCover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEditTextNameLayout"
            style="@style/customOutlineBox"
            android:layout_width="@dimen/mark_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mark_32dp"
            android:hint="@string/name"
            app:layout_constraintTop_toBottomOf="@id/cover"
            app:layout_constraintStart_toStartOf="@id/start_guideline_16dp"
            app:layout_constraintEnd_toStartOf="@id/end_guideline_16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEditTextDescriptionLayout"
            style="@style/customOutlineBox"
            android:layout_width="@dimen/mark_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mark_16dp"
            android:hint="@string/description"
            android:textCursorDrawable="@drawable/cursor"
            app:layout_constraintVertical_chainStyle="spread_inside"
            app:layout_constraintTop_toBottomOf="@id/inputEditTextNameLayout"
            app:layout_constraintStart_toStartOf="@id/start_guideline_16dp"
            app:layout_constraintEnd_toStartOf="@id/end_guideline_16dp"
            app:layout_constraintBottom_toTopOf="@id/bottomCreate">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bottomCreate"
            android:layout_width="@dimen/mark_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mark_32dp"
            android:layout_marginBottom="@dimen/mark_32dp"
            android:insetTop="@dimen/mark_0dp"
            android:insetBottom="@dimen/mark_0dp"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="@dimen/text_mark_14sp"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/mark_8dp"
            android:backgroundTint="@color/grey"

            app:layout_constraintStart_toStartOf="@id/start_guideline_16dp"
            app:layout_constraintEnd_toStartOf="@id/end_guideline_16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputEditTextDescriptionLayout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>